// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectMembersSummary renders as expected 1`] = `
<TouchableOpacity
  activeOpacity={0.2}
  onPress={[Function]}
>
  <Avatar
    avatarUrl={undefined}
    dimension={43}
    hasBorder={true}
    hasOverlap={false}
    zIndex={3}
  />
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    1 member
  </Text>
</TouchableOpacity>
`;

exports[`ProjectMembersSummary renders as expected without an onPress handler 1`] = `
<View
  onPress={undefined}
>
  <Avatar
    avatarUrl={undefined}
    dimension={43}
    hasBorder={true}
    hasOverlap={false}
    zIndex={3}
  />
  <Text
    accessible={true}
    allowFontScaling={true}
    ellipsizeMode="tail"
  >
    1 member
  </Text>
</View>
`;
